--- a/DemoAPI/Web.config
+++ b/DemoAPI/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=DESKTOP-1PICQDN;initial catalog=DemoAPI;uid=sa;pwd=123456;MultipleActiveResultSets=True" providerName="system.data.sqlclient" />
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-H22Q1GC\SQLEXPRESS;Initial Catalog=DemoAPI;Integrated Security=True" providerName="system.data.sqlclient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
