--- a/DemoAPI/DemoAPI.csproj
+++ b/DemoAPI/DemoAPI.csproj
@@ -215,6 +215,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Images\bancotuong.jpg" />
+    <Content Include="Images\ChessRoom.png" />
     <Content Include="Images\chutuongden.svg" />
     <Content Include="Images\chutuongdo.svg" />
     <Content Include="Images\maden1.svg" />
@@ -297,11 +298,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\Chat.cshtml" />
-    <Content Include="Views\Rooms\Create.cshtml" />
-    <Content Include="Views\Rooms\Delete.cshtml" />
-    <Content Include="Views\Rooms\Details.cshtml" />
-    <Content Include="Views\Rooms\Edit.cshtml" />
-    <Content Include="Views\Rooms\Index.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Home\Delete.cshtml" />
   </ItemGroup>
